--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Проверка1</h3>
+    
+    <h1>Yjdjt</h1>
     <p>Ghjdthrf</p>
 </body>
 </html>
